--- a/node109.html
+++ b/node109.html
@@ -110,8 +110,10 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </DIV>
 <!--End of Navigation Panel-->
 
-<H1><A NAME="SECTION061140000000000000000">
-La Estructura de una Aplicación Rack</A>
+<H1><A NAME="SECTION061140000000000000000"></A>
+<A NAME="section:estructuradeunaapprack"></A>
+<BR>
+La Estructura de una Aplicación Rack
 </H1>
 
 <P>
