--- a/node202.html
+++ b/node202.html
@@ -145,7 +145,7 @@ OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
 
 <P>
 OmniAuth is a library that standardizes multi-provider authentication
-for web applications. Any developer can create <A NAME="22451"></A><SPAN  CLASS="textbf">strategies</SPAN> for
+for web applications. Any developer can create <A NAME="22456"></A><SPAN  CLASS="textbf">strategies</SPAN> for
 OmniAuth that can
 authenticate users via disparate systems. 
 
@@ -177,11 +177,20 @@ Rack middleware
 list of OmniAuth strategies for use in your application</FONT>:
 
 <P>
-Véanse las secciones Rack en <A HREF="node95.html#chapter:rack">15</A>
+Para saber mas sobre Rack y sobre Middlewares Rack,
+véanse las secciones 
+
+<UL>
+<LI>Rack en <A HREF="node95.html#chapter:rack">15</A>,
+</LI>
+<LI><I>Middleware y la Clase Rack::Builder</I> en <A HREF="node113.html#section:middleware">15.18</A> 
 y
-<I>Middleware y la Clase Rack::Builder</I>
+</LI>
+<LI><I>La Estructura de una Aplicación Rack</I>
 en
-<A HREF="node113.html#section:middleware">15.18</A> para saber mas sobre Rack y sobre Middlewares Rack.
+<A HREF="node109.html#section:estructuradeunaapprack">15.14</A>
+</LI>
+</UL>
 
 <P>
 <PRE>
