--- a/node202.html
+++ b/node202.html
@@ -147,7 +147,7 @@ OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
 
 <P>
 OmniAuth is a library that standardizes multi-provider authentication
-for web applications. Any developer can create <A NAME="22459"></A><SPAN  CLASS="textbf">strategies</SPAN> for
+for web applications. Any developer can create <A NAME="22461"></A><SPAN  CLASS="textbf">strategies</SPAN> for
 OmniAuth that can
 authenticate users via disparate systems. 
 
@@ -164,9 +164,22 @@ From there, OmniAuth will take over and take the
 user through the necessary steps to authenticate them with the chosen strategy.
 
 <P>
-Once the user has authenticated, what do you do next? OmniAuth simply sets a special hash called the Authentication Hash on the Rack environment of a request to /auth/:provider/callback. This hash
-contains as much information about the user as OmniAuth was able to glean from the utilized strategy. You should set up an endpoint in your application that matches to the callback URL and then
-performs whatever steps are necessary for your application. 
+Once the user has authenticated, what do you do next? 
+
+<P>
+OmniAuth simply sets a special hash called the <A NAME="22463"></A><SPAN  CLASS="textbf">Authentication Hash</SPAN> 
+on the Rack environment of a request to <code>/auth/:provider/callback</code>. 
+
+<P>
+This hash
+contains as much information about the user as OmniAuth was able to
+glean from the utilized strategy. 
+
+<P>
+
+<FONT COLOR="#ff0000"> You should set up an endpoint in your
+application that matches to the callback URL and then
+performs whatever steps are necessary for your application</FONT>. 
 
 <P>
 
