--- a/node202.html
+++ b/node202.html
@@ -147,7 +147,7 @@ OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
 
 <P>
 OmniAuth is a library that standardizes multi-provider authentication
-for web applications. Any developer can create <A NAME="22461"></A><SPAN  CLASS="textbf">strategies</SPAN> for
+for web applications. Any developer can create <A NAME="22463"></A><SPAN  CLASS="textbf">strategies</SPAN> for
 OmniAuth that can
 authenticate users via disparate systems. 
 
@@ -155,31 +155,38 @@ authenticate users via disparate systems.
 OmniAuth strategies have been created for everything from Facebook to LDAP.
 
 <P>
-To use OmniAuth, you need only to redirect users to <code>/auth/:provider</code>,
+To use OmniAuth, you need only 
+
+<OL>
+<LI>to redirect users to <code>/auth/:provider</code>,
 where <code>:provider</code> is the name of the strategy 
 (for example, <code>developer</code> or <code>twitter</code>). 
 
 <P>
-From there, OmniAuth will take over and take the
+</LI>
+<LI>From there, OmniAuth will take over and take the
 user through the necessary steps to authenticate them with the chosen strategy.
 
 <P>
-Once the user has authenticated, what do you do next? 
-
-<P>
-OmniAuth simply sets a special hash called the <A NAME="22463"></A><SPAN  CLASS="textbf">Authentication Hash</SPAN> 
+</LI>
+<LI>Once the user has authenticated, 
+OmniAuth sets a special hash called the <A NAME="22465"></A><SPAN  CLASS="textbf">Authentication Hash</SPAN> 
 on the Rack environment of a request to <code>/auth/:provider/callback</code>. 
 
 <P>
-This hash
+</LI>
+<LI>This hash
 contains as much information about the user as OmniAuth was able to
 glean from the utilized strategy. 
 
 <P>
-
+</LI>
+<LI>
 <FONT COLOR="#ff0000"> You should set up an endpoint in your
 application that matches to the callback URL and then
 performs whatever steps are necessary for your application</FONT>. 
+</LI>
+</OL>
 
 <P>
 
