--- a/node202.html
+++ b/node202.html
@@ -123,7 +123,11 @@ OmniAuth OAuth2 gem</A>
 </UL>
 
 <P>
-This gem contains a generic OAuth2 strategy for OmniAuth. It is meant to
+This gem contains a 
+<FONT COLOR="#0000ff"> generic OAuth2 strategy for OmniAuth</FONT>. 
+
+<P>
+It is meant to
 serve as a building block strategy for other strategies and not to be used
 independently (since it has no inherent way to gather uid and user info).
 
