--- a/node199.html
+++ b/node199.html
@@ -156,26 +156,28 @@ Google Oauth
 <UL>
 <LI><A NAME="tex2html6153"
   HREF="node203.html#SECTION07440010000000000000">Configuration</A>
+<LI><A NAME="tex2html6154"
+  HREF="node203.html#SECTION07440020000000000000">Auth Hash</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html6154"
-  HREF="node204.html">Using OAuth 2.0 to Access Google APIs</A>
 <LI><A NAME="tex2html6155"
-  HREF="node205.html">Google OAuth 2.0 Playground</A>
+  HREF="node204.html">Using OAuth 2.0 to Access Google APIs</A>
 <LI><A NAME="tex2html6156"
-  HREF="node206.html">Sign-in with Google +</A>
+  HREF="node205.html">Google OAuth 2.0 Playground</A>
 <LI><A NAME="tex2html6157"
+  HREF="node206.html">Sign-in with Google +</A>
+<LI><A NAME="tex2html6158"
   HREF="node207.html">Google + API for Ruby</A>
 <UL>
-<LI><A NAME="tex2html6158"
-  HREF="node207.html#SECTION07480010000000000000">Donde</A>
 <LI><A NAME="tex2html6159"
+  HREF="node207.html#SECTION07480010000000000000">Donde</A>
+<LI><A NAME="tex2html6160"
   HREF="node207.html#SECTION07480020000000000000">Step 1: Enable the Google+ API</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html6160"
-  HREF="node208.html">Google+ Sign-In for server-side apps</A>
 <LI><A NAME="tex2html6161"
+  HREF="node208.html">Google+ Sign-In for server-side apps</A>
+<LI><A NAME="tex2html6162"
   HREF="node209.html">Authentication using the Google APIs Client Library for JavaScript</A>
 </UL>
 <!--End of Table of Child-Links-->
