--- a/node203.html
+++ b/node203.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html6225"
+<A NAME="tex2html6226"
   HREF="node204.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html6219"
+<A NAME="tex2html6220"
   HREF="node199.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html6213"
+<A NAME="tex2html6214"
   HREF="node202.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html6221"
+<A NAME="tex2html6222"
   HREF="node215.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html6223"
+<A NAME="tex2html6224"
   HREF="node218.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html6226"
+<B> Sig:</B> <A NAME="tex2html6227"
   HREF="node204.html">Using OAuth 2.0 to</A>
-<B>Sup:</B> <A NAME="tex2html6220"
+<B>Sup:</B> <A NAME="tex2html6221"
   HREF="node199.html">Google Oauth</A>
-<B> Ant:</B> <A NAME="tex2html6214"
+<B> Ant:</B> <A NAME="tex2html6215"
   HREF="node202.html">OmniAuth OAuth2 gem</A>
 <B> Con:</B> 
-<A NAME="tex2html6221"
+<A NAME="tex2html6222"
   HREF="node215.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html6223"
+<A NAME="tex2html6224"
   HREF="node218.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,8 +115,10 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html6227"
+<LI><A NAME="tex2html6228"
   HREF="node203.html#SECTION07440010000000000000">Configuration</A>
+<LI><A NAME="tex2html6229"
+  HREF="node203.html#SECTION07440020000000000000">Auth Hash</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -343,20 +345,67 @@ end
 
 <P>
 
+<H4><A NAME="SECTION07440020000000000000">
+Auth Hash</A>
+</H4>
+  
+
+Here's an example of an authentication hash available in the callback
+by accessing <code>request.env["omniauth.auth"]</code>:
+
+<P>
+<PRE>
+{
+    :provider =&gt; "google_oauth2",
+    :uid =&gt; "123456789",
+    :info =&gt; {
+        :name =&gt; "John Doe",
+        :email =&gt; "john@company_name.com",
+        :first_name =&gt; "John",
+        :last_name =&gt; "Doe",
+        :image =&gt; "https://lh3.googleusercontent.com/url/photo.jpg"
+    },
+    :credentials =&gt; {
+        :token =&gt; "token",
+        :refresh_token =&gt; "another_token",
+        :expires_at =&gt; 1354920555,
+        :expires =&gt; true
+    },
+    :extra =&gt; {
+        :raw_info =&gt; {
+            :id =&gt; "123456789",
+            :email =&gt; "user@domain.example.com",
+            :verified_email =&gt; true,
+            :name =&gt; "John Doe",
+            :given_name =&gt; "John",
+            :family_name =&gt; "Doe",
+            :link =&gt; "https://plus.google.com/123456789",
+            :picture =&gt; "https://lh3.googleusercontent.com/url/photo.jpg",
+            :gender =&gt; "male",
+            :birthday =&gt; "0000-06-25",
+            :locale =&gt; "en",
+            :hd =&gt; "company_name.com"
+        }
+    }
+}
+</PRE>
+
+<P>
+
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html6225"
+<A NAME="tex2html6226"
   HREF="node204.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html6219"
+<A NAME="tex2html6220"
   HREF="node199.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html6213"
+<A NAME="tex2html6214"
   HREF="node202.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html6221"
+<A NAME="tex2html6222"
   HREF="node215.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html6223"
+<A NAME="tex2html6224"
   HREF="node218.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -408,11 +457,11 @@ end
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html6226"
+<B> Sig:</B> <A NAME="tex2html6227"
   HREF="node204.html">Using OAuth 2.0 to</A>
-<B>Sup:</B> <A NAME="tex2html6220"
+<B>Sup:</B> <A NAME="tex2html6221"
   HREF="node199.html">Google Oauth</A>
-<B> Ant:</B> <A NAME="tex2html6214"
+<B> Ant:</B> <A NAME="tex2html6215"
   HREF="node202.html">OmniAuth OAuth2 gem</A>
 </DIV>
 <!--End of Navigation Panel-->
