--- a/node183.html
+++ b/node183.html
@@ -163,7 +163,7 @@ PARTE: HERRAMIENTAS</A>
 <LI><A NAME="tex2html5768"
   HREF="node198.html">Slim</A>
 <LI><A NAME="tex2html5769"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub, Facebook</A>
 <UL>
 <LI><A NAME="tex2html5770"
   HREF="node200.html">Introduction to OAuth</A>
