--- a/node198.html
+++ b/node198.html
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html6128"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B>Sup:</B> <A NAME="tex2html6122"
   HREF="node183.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html6116"
@@ -186,7 +186,7 @@ Slim
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html6128"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B>Sup:</B> <A NAME="tex2html6122"
   HREF="node183.html">PARTE: HERRAMIENTAS</A>
 <B> Ant:</B> <A NAME="tex2html6116"
