--- a/node199.html
+++ b/node199.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Google Oauth</TITLE>
-<META NAME="description" CONTENT="Google Oauth">
+<TITLE>Oauth: Google, Twitter, GitHub, Facebook</TITLE>
+<META NAME="description" CONTENT="Oauth: Google, Twitter, GitHub, Facebook">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -112,7 +112,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION07400000000000000000"></A>
 <A NAME="chapter:googleoauth"></A>
 <BR>
-Google Oauth
+Oauth: Google, Twitter, GitHub, Facebook
 </H1>
 <BR> <HR>
 <!--Table of Child-Links-->
