--- a/node200.html
+++ b/node200.html
@@ -95,9 +95,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6178"
   HREF="node201.html">OmniAuth gem: Standardized Multi-Provider</A>
 <B>Sup:</B> <A NAME="tex2html6172"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6166"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Con:</B> 
 <A NAME="tex2html6173"
   HREF="node215.html">
@@ -412,9 +412,9 @@ Véase</A>
 <B> Sig:</B> <A NAME="tex2html6178"
   HREF="node201.html">OmniAuth gem: Standardized Multi-Provider</A>
 <B>Sup:</B> <A NAME="tex2html6172"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6166"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
