--- a/node201.html
+++ b/node201.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6195"
   HREF="node202.html">OmniAuth OAuth2 gem</A>
 <B>Sup:</B> <A NAME="tex2html6189"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6183"
   HREF="node200.html">Introduction to OAuth</A>
 <B> Con:</B> 
@@ -503,7 +503,7 @@ Raymond Camden
 <B> Sig:</B> <A NAME="tex2html6195"
   HREF="node202.html">OmniAuth OAuth2 gem</A>
 <B>Sup:</B> <A NAME="tex2html6189"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6183"
   HREF="node200.html">Introduction to OAuth</A>
 </DIV>
