--- a/node204.html
+++ b/node204.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6246"
   HREF="node205.html">Google OAuth 2.0 Playground</A>
 <B>Sup:</B> <A NAME="tex2html6240"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6234"
   HREF="node203.html">The gem omniauth-google-oauth2</A>
 <B> Con:</B> 
@@ -242,7 +242,7 @@ token.
 <B> Sig:</B> <A NAME="tex2html6246"
   HREF="node205.html">Google OAuth 2.0 Playground</A>
 <B>Sup:</B> <A NAME="tex2html6240"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6234"
   HREF="node203.html">The gem omniauth-google-oauth2</A>
 </DIV>
