--- a/node205.html
+++ b/node205.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6260"
   HREF="node206.html">Sign-in with Google +</A>
 <B>Sup:</B> <A NAME="tex2html6254"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6248"
   HREF="node204.html">Using OAuth 2.0 to</A>
 <B> Con:</B> 
@@ -185,7 +185,7 @@ Google OAuth 2.0 Playground</A>
 <B> Sig:</B> <A NAME="tex2html6260"
   HREF="node206.html">Sign-in with Google +</A>
 <B>Sup:</B> <A NAME="tex2html6254"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6248"
   HREF="node204.html">Using OAuth 2.0 to</A>
 </DIV>
