--- a/node206.html
+++ b/node206.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6274"
   HREF="node207.html">Google + API for</A>
 <B>Sup:</B> <A NAME="tex2html6268"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6262"
   HREF="node205.html">Google OAuth 2.0 Playground</A>
 <B> Con:</B> 
@@ -201,7 +201,7 @@ provides the  <A NAME="tex2html823"
 <B> Sig:</B> <A NAME="tex2html6274"
   HREF="node207.html">Google + API for</A>
 <B>Sup:</B> <A NAME="tex2html6268"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6262"
   HREF="node205.html">Google OAuth 2.0 Playground</A>
 </DIV>
