--- a/node207.html
+++ b/node207.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6288"
   HREF="node208.html">Google+ Sign-In for server-side</A>
 <B>Sup:</B> <A NAME="tex2html6282"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6276"
   HREF="node206.html">Sign-in with Google +</A>
 <B> Con:</B> 
@@ -305,7 +305,7 @@ http://localhost:4567
 <B> Sig:</B> <A NAME="tex2html6288"
   HREF="node208.html">Google+ Sign-In for server-side</A>
 <B>Sup:</B> <A NAME="tex2html6282"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6276"
   HREF="node206.html">Sign-in with Google +</A>
 </DIV>
