--- a/node208.html
+++ b/node208.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6304"
   HREF="node209.html">Authentication using the Google</A>
 <B>Sup:</B> <A NAME="tex2html6298"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6292"
   HREF="node207.html">Google + API for</A>
 <B> Con:</B> 
@@ -210,7 +210,7 @@ for Web server applications flow.</FONT>
 <B> Sig:</B> <A NAME="tex2html6304"
   HREF="node209.html">Authentication using the Google</A>
 <B>Sup:</B> <A NAME="tex2html6298"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6292"
   HREF="node207.html">Google + API for</A>
 </DIV>
