--- a/node209.html
+++ b/node209.html
@@ -94,7 +94,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6316"
   HREF="node210.html">PARTE: BITÁCORA DEL CURSO</A>
 <B>Sup:</B> <A NAME="tex2html6310"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6306"
   HREF="node208.html">Google+ Sign-In for server-side</A>
 <B> Con:</B> 
@@ -187,7 +187,7 @@ Authentication using the Google APIs Client Library for JavaScript</A>
 <B> Sig:</B> <A NAME="tex2html6316"
   HREF="node210.html">PARTE: BITÁCORA DEL CURSO</A>
 <B>Sup:</B> <A NAME="tex2html6310"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6306"
   HREF="node208.html">Google+ Sign-In for server-side</A>
 </DIV>
