--- a/node1.html
+++ b/node1.html
@@ -908,7 +908,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1573"
   HREF="node198.html">Slim</A>
 <LI><A NAME="tex2html1574"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub, Facebook</A>
 <UL>
 <LI><A NAME="tex2html1575"
   HREF="node200.html">Introduction to OAuth</A>
