--- a/node202.html
+++ b/node202.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6215"
   HREF="node203.html">The gem omniauth-google-oauth2</A>
 <B>Sup:</B> <A NAME="tex2html6209"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6203"
   HREF="node201.html">OmniAuth gem: Standardized Multi-Provider</A>
 <B> Con:</B> 
@@ -201,7 +201,7 @@ independently, since it has no inherent way to gather uid and user info.
 <B> Sig:</B> <A NAME="tex2html6215"
   HREF="node203.html">The gem omniauth-google-oauth2</A>
 <B>Sup:</B> <A NAME="tex2html6209"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6203"
   HREF="node201.html">OmniAuth gem: Standardized Multi-Provider</A>
 </DIV>
