--- a/node203.html
+++ b/node203.html
@@ -95,7 +95,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B> Sig:</B> <A NAME="tex2html6229"
   HREF="node204.html">Using OAuth 2.0 to</A>
 <B>Sup:</B> <A NAME="tex2html6223"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6217"
   HREF="node202.html">OmniAuth OAuth2 gem</A>
 <B> Con:</B> 
@@ -475,7 +475,7 @@ by accessing <code>request.env["omniauth.auth"]</code>:
 <B> Sig:</B> <A NAME="tex2html6229"
   HREF="node204.html">Using OAuth 2.0 to</A>
 <B>Sup:</B> <A NAME="tex2html6223"
-  HREF="node199.html">Google Oauth</A>
+  HREF="node199.html">Oauth: Google, Twitter, GitHub,</A>
 <B> Ant:</B> <A NAME="tex2html6217"
   HREF="node202.html">OmniAuth OAuth2 gem</A>
 </DIV>
