--- a/node207.html
+++ b/node207.html
@@ -127,6 +127,19 @@ to your account information). Choose the link <B>View All</B>.
 
 <P>
 
+<UL>
+<LI>Remember to kill the session if you want to check that the permit
+has been effectively removed. 
+</LI>
+<LI>Go to chrome and open a window in incognito mode
+</LI>
+<LI>Attempt to access the URL that requires Google Authentication
+in your service
+</LI>
+</UL>
+
+<P>
+
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html6293"
   HREF="node208.html">
