--- a/node207.html
+++ b/node207.html
@@ -131,10 +131,13 @@ to your account information). Choose the link <B>View All</B>.
 <LI>Remember to kill the session if you want to check that the permit
 has been effectively removed. 
 </LI>
-<LI>Go to chrome and open a window in incognito mode
+<LI>Go to chrome and open a window in 
+<FONT COLOR="#ff0000"> incognito mode</FONT>
 </LI>
 <LI>Attempt to access the URL that requires Google Authentication
 in your service
+</LI>
+<LI>It has to ask you for permits again
 </LI>
 </UL>
 
