--- a/node207.html
+++ b/node207.html
@@ -116,7 +116,8 @@ Revoking Access to an App</A>
 
 <P>
 Go to
-
+<A NAME="tex2html825"
+  HREF="https://security.google.com/settings/security/permissions?pli=1">https://security.google.com/settings/security/permissions</A>
 <P>
 Or to your configuration 
 <A NAME="tex2html826"
