--- a/node207.html
+++ b/node207.html
@@ -123,8 +123,8 @@ Or to your configuration
 <A NAME="tex2html826"
   HREF="https://www.google.com/settings/personalinfo">https://www.google.com/settings/personalinfo</A>
 and there to <B>security</B>. From there go to the section
-<B>Account permissions</B> (Control which apps and websites have access
-to your account information). Choose the link <B>View All</B>.
+<B>Account permissions</B> (<I>Control which apps and websites have access
+to your account information</I>). Choose the link <B>View All</B>.
 
 <P>
 
