--- a/node65.html
+++ b/node65.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04760000000000000000"></A>
-   <A NAME="13806"></A>
+   <A NAME="13808"></A>
   
 <A NAME="practica:pl0ampliadojison"></A>
 <BR>
@@ -212,6 +212,10 @@ Referencias para esta Práctica</A>
   
 
 <UL>
+<LI>Véase el capítulo 
+<I>Oauth: Google, Twitter, GitHub, Facebook</I>
+<A HREF="node200.html#chapter:googleoauth">32</A>
+</LI>
 <LI>Véase el capítulo <I>Heroku</I> <A HREF="node185.html#chapter:heroku">29</A>
 </LI>
 <LI><A NAME="tex2html463"
