--- a/node65.html
+++ b/node65.html
@@ -126,7 +126,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04760000000000000000"></A>
-   <A NAME="13820"></A>
+   <A NAME="13822"></A>
   
 <A NAME="practica:pl0ampliadojison"></A>
 <BR>
@@ -201,6 +201,19 @@ del lenguaje así como alguna situación de error
   HREF="http://oauth.net/">OAuth</A>
  para que además de Google pueda hacerse
 con Twitter ó GitHub ó Facebook. Sólo debe implementar una de estas, no las tres.
+</LI>
+<LI><UL>
+<LI>Use un repositorio 
+privado en BitBucket o bien solicite al adminsitrador del Centro de Cálculo 
+un repositorio privado en GitHub.
+</LI>
+<LI>Comparta dicho repositorio con sus colaboradores y con el profesor.
+</LI>
+<LI>Suba la práctica al workshop/taller antes de la fecha límite
+</LI>
+<LI>Cuando el taller pase a la fase de evaluación haga público su repositorio
+</LI>
+</UL>
 </LI>
 </UL>
 
