--- a/node65.html
+++ b/node65.html
@@ -204,7 +204,7 @@ con Twitter ó GitHub ó Facebook. Sólo debe implementar una de estas, no las t
 </LI>
 <LI><UL>
 <LI>Use un repositorio 
-privado en BitBucket o bien solicite al adminsitrador del Centro de Cálculo 
+privado en BitBucket o bien solicite al administrador del Centro de Cálculo 
 un repositorio privado en GitHub.
 </LI>
 <LI>Comparta dicho repositorio con sus colaboradores y con el profesor.
