--- a/node65.html
+++ b/node65.html
@@ -200,7 +200,7 @@ del lenguaje así como alguna situación de error
 <LI>Extienda la autenticación  <A NAME="tex2html462"
   HREF="http://oauth.net/">OAuth</A>
  para que además de Google pueda hacerse
-con Twitter ó GitHub ó Facebook. Sólo debe implementar una de estas, no las tres.
+con Twitter ó GitHub ó Facebook ó ... Sólo debe implementar una.
 </LI>
 <LI><UL>
 <LI>Use un repositorio 
