--- a/node65.html
+++ b/node65.html
@@ -202,7 +202,9 @@ del lenguaje así como alguna situación de error
  para que además de Google pueda hacerse
 con Twitter ó GitHub ó Facebook ó ... Sólo debe implementar una.
 </LI>
-<LI><UL>
+<LI>Método de Entrega:
+
+<UL>
 <LI>Use un repositorio 
 privado en BitBucket o bien solicite al administrador del Centro de Cálculo 
 un repositorio privado en GitHub.
