--- a/node202.html
+++ b/node202.html
@@ -274,7 +274,9 @@ To
 <LI>In the sidebar on the left, select <code>APIs &amp; auth</code>. 
 </LI>
 <LI>In the displayed list
-of APIs, make sure all the APIs you are using show a status of ON.
+of APIs, 
+<FONT COLOR="#ff0000"> make sure all the APIs you are using show a status of</FONT> 
+<FONT COLOR="#00ff00"> ON</FONT>.
 </LI>
 <LI>In the sidebar on the left, select Registered apps.
 At the top of the page, select Register App.
