--- a/node202.html
+++ b/node202.html
@@ -301,10 +301,28 @@ the Developers Console.
 To delete a project, do the following:
 
 <P>
-Disable billing on the project.
-Mark the project for deletion in the Developers Console. At this point, Google emails all project members to inform them of the pending project deletion.
-If you change your mind, undelete the project. Undeleting a project is possible for seven days, counting from the time you marked the project for deletion. Undeleting returns the project to the state it was in prior to deletion.
-The deletion of a project that has billing set up will not be complete until the current billing cycle ends. Typically, this means that the project will not be deleted until you receive the next bill for the project and your account is charged successfully. Also, the time it takes to delete a project might vary depending on the number or kind of services in use within the project.
+
+<UL>
+<LI>Disable billing on the project.
+</LI>
+<LI>Mark the project for deletion in the Developers Console. 
+</LI>
+<LI>At this point, Google emails all project members to inform them of the pending project deletion.
+</LI>
+<LI>If you change your mind, undelete the project. 
+</LI>
+<LI>Undeleting a project is
+possible for seven days, counting from the time you marked the project
+for deletion. 
+</LI>
+<LI>Undeleting returns the project to the state it was in
+prior to deletion.
+</LI>
+<LI>The time it
+takes to delete a project might vary depending on the number or kind of
+services in use within the project.
+</LI>
+</UL>
 
 <P>
 
