--- a/node69.html
+++ b/node69.html
@@ -196,7 +196,7 @@ el código de la acción semántica asociada con la regla <!-- MATH
 
 <P>
 Todos los analizadores LR comparten, salvo pequeñas
-exepciones, el mismo algoritmo
+excepciones, el mismo algoritmo
 de análisis. Lo que más los diferencia es la forma en 
 la que construyen las tablas.
 En <code>jison</code>
