--- a/node66.html
+++ b/node66.html
@@ -158,6 +158,10 @@ es: constante, variable, procedimiento, etc.
 </LI>
 <LI>Si es una constante se guarda su valor
 </LI>
+<LI>Cada uso de un identificador (constante, variable, procedimiento)
+tiene un atributo <code>declaracion</code> que indica en que nodo
+se declaró
+</LI>
 </UL>
 
 <P>
