--- a/node66.html
+++ b/node66.html
@@ -159,7 +159,7 @@ es: constante, variable, procedimiento, etc.
 <LI>Si es una constante se guarda su valor
 </LI>
 <LI>Cada uso de un identificador (constante, variable, procedimiento)
-tiene un atributo <code>declaracion</code> que indica en que nodo
+tiene un atributo <code>declared_in</code> que referencia en que nodo
 se declaró
 </LI>
 </UL>
