--- a/node66.html
+++ b/node66.html
@@ -162,6 +162,15 @@ es: constante, variable, procedimiento, etc.
 tiene un atributo <code>declared_in</code> que referencia en que nodo
 se declaró
 </LI>
+<LI>Si un identificador es usado y no fué declarado es un error
+</LI>
+<LI>Si se trata de una llamada a procedimiento se comprobará que el número 
+de argumentos coincide con el número de parámetros declarados en su 
+definición
+</LI>
+<LI>Si es un identificador de una constante no puede ser usado en la parte
+izquierda de una asignación que no sea la de su declaración
+</LI>
 </UL>
 
 <P>
