--- a/node66.html
+++ b/node66.html
@@ -146,7 +146,7 @@ constantes, variables  y procedimientos declarados en el mismo.
 <LI>Existirá ademas una tabla de símbolos asociada con el nodo raíz 
 que representa al programa principal.
 </LI>
-<LI>Las declaraciones de constantes y variables no crean nodo sino que se
+<LI>Las declaraciones de constantes y variables no crean nodo, sino que se
 incorporan como información a la tabla de símbolos del procedimiento
 actual
 </LI>
