--- a/node66.html
+++ b/node66.html
@@ -164,12 +164,14 @@ se declaró
 </LI>
 <LI>Si un identificador es usado y no fué declarado es un error
 </LI>
-<LI>Si se trata de una llamada a procedimiento se comprobará que el número 
+<LI>Si se trata de una llamada a procedimiento (se ha usado <code>CALL</code> y el identificador corresponde a un <code>PROCEDURE</code>)
+se comprobará que el número 
 de argumentos coincide con el número de parámetros declarados en su 
 definición
 </LI>
-<LI>Si es un identificador de una constante no puede ser usado en la parte
-izquierda de una asignación que no sea la de su declaración
+<LI>Si es un identificador de una constante, es un error
+que sea usado en la parte
+izquierda de una asignación (que no sea la de su declaración)
 </LI>
 </UL>
 
