--- a/node66.html
+++ b/node66.html
@@ -173,6 +173,9 @@ definición
 que sea usado en la parte
 izquierda de una asignación (que no sea la de su declaración)
 </LI>
+<LI>Guarde en una tabla el nombre de usuario que guardó un programa.
+Provea una ruta para ver los programas de un usuario.
+</LI>
 </UL>
 
 <P>
