--- a/node66.html
+++ b/node66.html
@@ -122,7 +122,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04770000000000000000"></A>
-   <A NAME="13846"></A>
+   <A NAME="13848"></A>
 <BR>
 Práctica: Análisis de Ámbito en PL0
 </H1>
@@ -173,6 +173,9 @@ definición
 que sea usado en la parte
 izquierda de una asignación (que no sea la de su declaración)
 </LI>
+<LI>Base de Datos
+
+<OL>
 <LI>Guarde en una tabla el nombre de usuario que guardó un programa.
 Provea una ruta para ver los programas de un usuario.
 </LI>
@@ -180,6 +183,8 @@ Provea una ruta para ver los programas de un usuario.
 Vea la sección
 <A NAME="tex2html470"
   HREF="http://datamapper.org/docs/associations.html">DataMapper Associations</A>.
+</LI>
+</OL>
 </LI>
 </UL>
 
