--- a/node66.html
+++ b/node66.html
@@ -186,6 +186,10 @@ Vea la sección
 </LI>
 </OL>
 </LI>
+<LI>Use la sección <code>issues</code> de GitHub para coordinarse así como
+para llevar un histórico de las incidencias y la forma en la que
+se resolvieron.
+</LI>
 </UL>
 
 <P>
