--- a/node66.html
+++ b/node66.html
@@ -186,7 +186,8 @@ Vea la sección
 </LI>
 </OL>
 </LI>
-<LI>Use la sección <code>issues</code> de GitHub para coordinarse así como
+<LI>Use la sección <code>issues</code> de su repositorio en 
+GitHub para coordinarse así como
 para llevar un histórico de las incidencias y la forma en la que
 se resolvieron. Repase el tutorial
 <A NAME="tex2html471"
