--- a/node88.html
+++ b/node88.html
@@ -110,7 +110,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04940000000000000000"></A>
-   <A NAME="15996"></A>
+   <A NAME="16002"></A>
   
 <A NAME="practica:treetransofrmationsPL0"></A>
 <BR>
@@ -119,6 +119,52 @@ Práctica: Transformaciones en Los Árboles del Analizador PL0
 Partimos del código realizado en la práctica 
 <I>Análisis de Ámbito en PL0</I>
 <A HREF="node66.html#practica:analisisdeambitopl0">7.7</A>.
+
+<P>
+Modifique el árbol generado por el código de esa práctica
+usando las transformaciones de <A NAME="16003"></A><SPAN  CLASS="textbf">constant folding</SPAN> o
+<A NAME="16005"></A><SPAN  CLASS="textbf">plegado de las constantes</SPAN>:
+
+<P>
+<BR>
+<BR>
+<!-- MATH
+ $PLUS(NUM_1, NUM_2) \Longrightarrow NUM_3$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="277" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img332.png"
+ ALT="$ PLUS(NUM_1, NUM_2) \Longrightarrow NUM_3$"></SPAN> <code>{ $NUM_3{VAL} = $NUM_1{VAL} + $NUM_2{VAL} }</code>
+<BR>
+<BR>
+<!-- MATH
+ $MINUS(NUM_1, NUM_2) \Longrightarrow NUM_3$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="296" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img391.png"
+ ALT="$ MINUS(NUM_1, NUM_2) \Longrightarrow NUM_3$"></SPAN> <code>{ $NUM_3{VAL} = $NUM_1{VAL} - $NUM_2{VAL} }</code>
+<BR>
+<BR>
+<!-- MATH
+ $TIMES(NUM_1, NUM_2) \Longrightarrow NUM_3$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="292" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img392.png"
+ ALT="$ TIMES(NUM_1, NUM_2) \Longrightarrow NUM_3$"></SPAN> <code>{ $NUM_3{VAL} = $NUM_1{VAL} * $NUM_2{VAL} }</code>
+<BR>
+<BR>
+<!-- MATH
+ $DIV(NUM_1, NUM_2) \Longrightarrow NUM_3$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="264" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img393.png"
+ ALT="$ DIV(NUM_1, NUM_2) \Longrightarrow NUM_3$"></SPAN> <code>{ $NUM_3{VAL} = $NUM_1{VAL} / $NUM_2{VAL} }</code>
+
+<P>
+etc.
 
 <P>
 
