--- a/node88.html
+++ b/node88.html
@@ -110,7 +110,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04940000000000000000"></A>
-   <A NAME="16002"></A>
+   <A NAME="16004"></A>
   
 <A NAME="practica:treetransofrmationsPL0"></A>
 <BR>
@@ -122,8 +122,8 @@ Partimos del código realizado en la práctica
 
 <P>
 Modifique el árbol generado por el código de esa práctica
-usando las transformaciones de <A NAME="16003"></A><SPAN  CLASS="textbf">constant folding</SPAN> o
-<A NAME="16005"></A><SPAN  CLASS="textbf">plegado de las constantes</SPAN>:
+usando las transformaciones de <A NAME="16005"></A><SPAN  CLASS="textbf">constant folding</SPAN> o
+<A NAME="16007"></A><SPAN  CLASS="textbf">plegado de las constantes</SPAN>:
 
 <P>
 <BR>
@@ -165,6 +165,32 @@ usando las transformaciones de <A NAME="16003"></A><SPAN  CLASS="textbf">constan
 
 <P>
 etc.
+
+<P>
+Opcionalmente si lo desea puede considerar otras transformaciones: 
+<BR>
+<BR>
+<!-- MATH
+ $TIMES(X, NUM_2)$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="161" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img394.png"
+ ALT="$ TIMES(X, NUM_2)$"></SPAN> and <code>{ $NUM_2{VAL} = </code><SPAN CLASS="MATH"><IMG
+ WIDTH="21" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
+ SRC="img395.png"
+ ALT="$ 2^s$"></SPAN> para algún <SPAN CLASS="MATH"><IMG
+ WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
+ SRC="img188.png"
+ ALT="$ s$"></SPAN> <code>}</code> <!-- MATH
+ $\Longrightarrow SHIFTLEFT(X; NUM_3)$
+ -->
+<SPAN CLASS="MATH"><IMG
+ WIDTH="244" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
+ SRC="img396.png"
+ ALT="$ \Longrightarrow SHIFTLEFT(X; NUM_3)$"></SPAN> <code>{ $NUM_3{VAL} = s }</code>
+<BR>
+<BR>
 
 <P>
 
