--- a/node88.html
+++ b/node88.html
@@ -171,7 +171,8 @@ Donde</A>
   HREF="https://github.com/gitpan/Parse-Eyapp/blob/master/lib/Parse/Eyapp/MatchingTrees.pod">Tree Matching and Tree Substitution</A>
 </LI>
 <LI><A NAME="tex2html492"
-  HREF="https://github.com/gitpan/Parse-Eyapp/blob/master/lib/Parse/Eyapp/Node.pm">Node.pm</A>
+  HREF="https://github.com/gitpan/Parse-Eyapp/blob/master/lib/Parse/Eyapp/Node.pm#L149-L172">Node.pm</A>
+(Véase el método <code>s</code>)
 </LI>
 </UL>
 
