--- a/node87.html
+++ b/node87.html
@@ -133,8 +133,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 Patrones Árbol y Transformaciones Árbol
 </H1>
 Una transformación de un programa puede ser descrita
-como un conjunto de <A NAME="16020"></A><SPAN  CLASS="textbf">reglas de transformación</SPAN> 
-o <A NAME="16022"></A><SPAN  CLASS="textbf">esquema de traducción árbol</SPAN>
+como un conjunto de <A NAME="16022"></A><SPAN  CLASS="textbf">reglas de transformación</SPAN> 
+o <A NAME="16024"></A><SPAN  CLASS="textbf">esquema de traducción árbol</SPAN>
 sobre el árbol abstracto que representa el programa.
 
 <P>
@@ -150,7 +150,7 @@ por ternas <!-- MATH
 terna <SPAN CLASS="MATH"><IMG
  WIDTH="14" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img262.png"
- ALT="$ p$"></SPAN> es un <A NAME="16024"></A><SPAN  CLASS="textbf">patrón árbol</SPAN> que dice que árboles
+ ALT="$ p$"></SPAN> es un <A NAME="16026"></A><SPAN  CLASS="textbf">patrón árbol</SPAN> que dice que árboles
 deben ser seleccionados. La segunda componente 
 <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
@@ -201,7 +201,7 @@ Por ejemplo:
 
 <P>
 cuyo significado es que dondequiera que haya un nódo del AAA que case 
-con el <A NAME="16026"></A><SPAN  CLASS="textbf">patrón de entrada</SPAN> <!-- MATH
+con el <A NAME="16028"></A><SPAN  CLASS="textbf">patrón de entrada</SPAN> <!-- MATH
  $PLUS(NUM, NUM)$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -223,7 +223,7 @@ para distinguirlos en la parte semántica. La acción indica
 como deben recomputarse los atributos para el nuevo árbol:
 El atributo <code>VAL</code> del árbol resultante es la suma de los atributos
 <code>VAL</code> de los operandos en el árbol que ha casado.
-La transformación se repite hasta que se produce la <A NAME="16028"></A><SPAN  CLASS="textbf">normalización del árbol</SPAN>.
+La transformación se repite hasta que se produce la <A NAME="16030"></A><SPAN  CLASS="textbf">normalización del árbol</SPAN>.
 
 <P>
 Las reglas de ``casamiento''  de árboles pueden ser mas complejas, 
@@ -232,6 +232,7 @@ haciendo alusión a propiedades de los atributos, por ejemplo
 <P>
 <BR>
 <BR>
+<DIV ALIGN="CENTER">
 <!-- MATH
  $ASSIGN(LEFTVALUE, x)\ and$
  -->
@@ -245,6 +246,7 @@ haciendo alusión a propiedades de los atributos, por ejemplo
  WIDTH="75" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
  SRC="img335.png"
  ALT="$ \Longrightarrow NIL$"></SPAN>
+</DIV>
 <BR>
 <BR>
 
@@ -318,8 +320,8 @@ independientemente de la forma que tenga su subárbol derecho.
 
 <P>
 Las siguientes definiciones formalizan una aproximación simplificada 
-al significado de los conceptos <A NAME="16030"></A><SPAN  CLASS="textbf">patrones árbol</SPAN> y
-<A NAME="16032"></A><SPAN  CLASS="textbf">casamiento de árboles</SPAN>.
+al significado de los conceptos <A NAME="16032"></A><SPAN  CLASS="textbf">patrones árbol</SPAN> y
+<A NAME="16034"></A><SPAN  CLASS="textbf">casamiento de árboles</SPAN>.
 
 <P>
 
@@ -365,7 +367,7 @@ aridad cero:
  WIDTH="78" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img344.png"
  ALT="$ B(V \cup \Sigma)$"></SPAN>
-se denomina <A NAME="16038"></A><SPAN  CLASS="textbf">patrón</SPAN> sobre <SPAN CLASS="MATH"><IMG
+se denomina <A NAME="16040"></A><SPAN  CLASS="textbf">patrón</SPAN> sobre <SPAN CLASS="MATH"><IMG
  WIDTH="17" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img18.png"
  ALT="$ \Sigma$"></SPAN>.</I></DIV><P></P>
@@ -380,7 +382,7 @@ Patrón Lineal</A>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">9</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Se dice que un
-patrón es un <A NAME="16044"></A><SPAN  CLASS="textbf">patrón lineal</SPAN> si ninguna variable se repite.</I></DIV><P></P>
+patrón es un <A NAME="16046"></A><SPAN  CLASS="textbf">patrón lineal</SPAN> si ninguna variable se repite.</I></DIV><P></P>
 
 <P>
 <P>
@@ -461,7 +463,7 @@ subárboles <SPAN CLASS="MATH"><IMG
  SRC="img313.png"
  ALT="$ t/2\ldotp1$"></SPAN> situados en las posiciones de las variables
 <A NAME="tex2html489"
-  HREF="footnode.html#foot15906"><SUP><SPAN CLASS="arabic">9</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A></I>
+  HREF="footnode.html#foot15908"><SUP><SPAN CLASS="arabic">9</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A></I>
 <P></DIV><P></P>
 
 <P>
@@ -568,7 +570,7 @@ Sustitución</A>
 
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">9</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">4</SPAN></B> &nbsp; 
-<I>Una <A NAME="16050"></A><SPAN  CLASS="textbf">sustitución árbol</SPAN> es una aplicación <SPAN CLASS="MATH"><IMG
+<I>Una <A NAME="16052"></A><SPAN  CLASS="textbf">sustitución árbol</SPAN> es una aplicación <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img362.png"
  ALT="$ \theta$"></SPAN> que asigna variables
@@ -734,7 +736,7 @@ Casamiento Árbol</A>
 <SPAN CLASS="MATH"><IMG
  WIDTH="71" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img346.png"
- ALT="$ x_1, \ldots x_k$"></SPAN> <A NAME="16056"></A><SPAN  CLASS="textbf">casa con un árbol</SPAN>
+ ALT="$ x_1, \ldots x_k$"></SPAN> <A NAME="16058"></A><SPAN  CLASS="textbf">casa con un árbol</SPAN>
 <!-- MATH
  $t \in B(\Sigma)$
  -->
@@ -765,7 +767,7 @@ es, si existen <!-- MATH
 También se dice que <SPAN CLASS="MATH"><IMG
  WIDTH="14" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img376.png"
- ALT="$ \tau$"></SPAN> <A NAME="16058"></A><SPAN  CLASS="textbf">casa con la sustitución</SPAN>
+ ALT="$ \tau$"></SPAN> <A NAME="16060"></A><SPAN  CLASS="textbf">casa con la sustitución</SPAN>
 <!-- MATH
  $\{x_1/t_1, \ldots x_k/t_k\}$
  -->
@@ -901,7 +903,7 @@ El problema aquí es equivalente al de las expresiones regulares
 en el caso de los lenguajes lineales. En aquellos, los autómatas finitos 
 nos proveen con un mecanismo para reconocer si una determinada cadena
 ``casa''' o no con la expresión regular. Existe un concepto análogo,
-el de <A NAME="16060"></A><SPAN  CLASS="textbf">autómata árbol</SPAN> que resuelve el problema del ``casamiento''
+el de <A NAME="16062"></A><SPAN  CLASS="textbf">autómata árbol</SPAN> que resuelve el problema del ``casamiento''
 de patrones árbol. Al igual que el concepto de autómata permite 
 la construcción de software para la búsqueda de cadenas y su 
 posterior modificación, el concepto de autómata árbol 
