--- a/node88.html
+++ b/node88.html
@@ -289,6 +289,7 @@ $p-&gt;generate(); # Create the tranformations
 $t-&gt;s($uminus); # Transform UMINUS nodes
 $t-&gt;s(@all);    # constant folding and mult. by zero
 </PRE>
+Obtenemos el árbol:
 <PRE>
 Syntax Tree after transformations:
 EXPRESSION_LIST(NUM(TERMINAL[-6]),NUM(TERMINAL[2]))
