--- a/node88.html
+++ b/node88.html
@@ -408,7 +408,7 @@ El método <TT>s</TT></A>
 <P>
 El código de <code>s</code> está en 
 <A NAME="tex2html494"
-  HREF="https://github.com/gitpan/Parse-Eyapp/blob/master/lib/Parse/Eyapp/Node.pm">Node.pm</A>:
+  HREF="https://github.com/gitpan/Parse-Eyapp/blob/master/lib/Parse/Eyapp/Node.pm">lib/Parse/Eyapp/Node.pm</A>:
 <PRE>
 sub s {
   my @patterns = @_[1..$#_];
