--- a/node76.html
+++ b/node76.html
@@ -234,6 +234,17 @@ Donde</A>
 <P>
 
 <UL>
+<LI><PRE>
+[~/jison/jison-nolr(master)]$ pwd -P
+/Users/casiano/local/src/javascript/PLgrado/jison/jison-nolr
+</PRE>
+</LI>
+<LI><PRE>
+[~/jison/jison-nolr(master)]$ git remote -v
+origin  git@github.com:crguezl/jison-nolr.git (fetch)
+origin  git@github.com:crguezl/jison-nolr.git (push)
+</PRE>
+</LI>
 <LI><A NAME="tex2html481"
   HREF="https://github.com/crguezl/jison-nolr">https://github.com/crguezl/jison-nolr</A>
 </LI>
