--- a/node76.html
+++ b/node76.html
@@ -131,7 +131,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="node76.html#SECTION047173000000000000000">Un Lenguaje Intrínsecamente Ambiguo</A>
 <UL>
 <LI><A NAME="tex2html3792"
-  HREF="node76.html#SECTION047173010000000000000">donde</A>
+  HREF="node76.html#SECTION047173010000000000000">Donde</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html3793"
@@ -310,7 +310,7 @@ the grammar to an unambiguous one does not work.
 <P>
 
 <H4><A NAME="SECTION047173010000000000000">
-donde</A>
+Donde</A>
 </H4>
   
 
