--- a/node59.html
+++ b/node59.html
@@ -260,7 +260,7 @@ Análisis Sintáctico Ascendente en JavaScript</A>
   HREF="node76.html#SECTION047173000000000000000">Un Lenguaje Intrínsecamente Ambiguo</A>
 <UL>
 <LI><A NAME="tex2html3508"
-  HREF="node76.html#SECTION047173010000000000000">donde</A>
+  HREF="node76.html#SECTION047173010000000000000">Donde</A>
 </UL>
 <LI><A NAME="tex2html3509"
   HREF="node76.html#SECTION047174000000000000000">Conflicto reduce-reduce</A>
