--- a/node69.html
+++ b/node69.html
@@ -200,7 +200,7 @@ Asi <code>$a, 1</code> significa acceder al parámetro <code>a</code> que está 
 <code>1</code> del stack frame/ámbito actual y <code>$v, 0</code> es el parámetro <code>v</code>
 en el ámbito/stack frame actual
 </LI>
-<LI>El frame pointer o base pointer BP indica el nivel de anidamiento esático (en 
+<LI>El frame pointer o base pointer BP indica el nivel de anidamiento estático (en 
 el fuente) de la rutina. Así cuando se va a buscar una variable local
 declarada en la rutina que anida la actual se recorre la lista de frames via BP o frame pointer tantas veces como el nivel de anidamiento indique.
 
