--- a/node69.html
+++ b/node69.html
@@ -380,7 +380,7 @@ g(3, 4)
 
 <P>
 </LI>
-<LI>Puede comenzar haciedno un fork del proyecto 
+<LI>Puede comenzar haciendo un fork del proyecto 
 <A NAME="tex2html474"
   HREF="https://github.com/crguezl/ull-etsii-grado-pl-infix2postfix">ull-etsii-grado-pl-infix2postfix</A>
 en GitHub. Esta incompleto. Rellene las acciones semánticas que faltan;
