--- a/node229.html
+++ b/node229.html
@@ -272,6 +272,8 @@ e: e '-' e | NUM ;
 <LI>Encuentre el conjunto de terminales que puede aparecer a continuación de 
 <code>e</code> en una derivación de la gramática. No se olvide de considerar el terminale <code>END-OF-INPUT</code>. Use el carácter <code>'$'</code> para representarlo.
 </LI>
+<LI>Construya la tabla de acciones (<code>action</code>) del analizador SLR para esta gramática
+</LI>
 </OL>
 
 <P>
