--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html834"
+<A NAME="tex2html836"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html828"
+<A NAME="tex2html830"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html822"
+<A NAME="tex2html824"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html830"
+<A NAME="tex2html832"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html832"
+<A NAME="tex2html834"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html835"
+<B> Sig:</B> <A NAME="tex2html837"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html829"
+<B>Sup:</B> <A NAME="tex2html831"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html823"
+<B> Ant:</B> <A NAME="tex2html825"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html830"
+<A NAME="tex2html832"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html832"
+<A NAME="tex2html834"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,30 +103,30 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html836"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
-<LI><A NAME="tex2html837"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html838"
-  HREF="node9.html#SECTION04120030000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html839"
-  HREF="node9.html#SECTION04120040000000000000">Despliegue</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html840"
-  HREF="node9.html#SECTION04120050000000000000">Mocha y Chai</A>
+  HREF="node9.html#SECTION04120030000000000000">temperature.js</A>
 <LI><A NAME="tex2html841"
-  HREF="node9.html#SECTION04120060000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION04120040000000000000">Despliegue</A>
 <LI><A NAME="tex2html842"
-  HREF="node9.html#SECTION04120070000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION04120050000000000000">Mocha y Chai</A>
 <LI><A NAME="tex2html843"
-  HREF="node9.html#SECTION04120080000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION04120060000000000000">Pruebas: Estructura</A>
 <LI><A NAME="tex2html844"
+  HREF="node9.html#SECTION04120070000000000000">Pruebas: <TT>index.html</TT></A>
+<LI><A NAME="tex2html845"
+  HREF="node9.html#SECTION04120080000000000000">Pruebas: Añadir los tests</A>
+<LI><A NAME="tex2html846"
   HREF="node9.html#SECTION04120090000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2466"></A>
+   <A NAME="2470"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -462,24 +462,31 @@ Pruebas: Véase</A>
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
 by Nicolas Perriault
 </LI>
+<LI><A NAME="tex2html24"
+  HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">An example setup for unit testing JavaScript in the browser with the Mocha testing framework and Chai assertions</A>
+</LI>
+<LI><A NAME="tex2html25"
+  HREF="http://www.kenpowers.net/blog/testing-in-browsers-and-node/">Testing in Browsers and Node with Mocha, Chai, Sinon, and Testem
+</A>
+</LI>
 </UL>
 
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html834"
+<A NAME="tex2html836"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html828"
+<A NAME="tex2html830"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html822"
+<A NAME="tex2html824"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html830"
+<A NAME="tex2html832"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html832"
+<A NAME="tex2html834"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -519,11 +526,11 @@ by Nicolas Perriault
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html835"
+<B> Sig:</B> <A NAME="tex2html837"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html829"
+<B>Sup:</B> <A NAME="tex2html831"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html823"
+<B> Ant:</B> <A NAME="tex2html825"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
